Bug 1417220 - Force re-resolve style for doc element when binding requires so. r=emilio

MozReview-Commit-ID: DdbpZnk7tCZ